# Marvell

./: .gitignore  agent_responses.json  agent_responses_amem.json
A-mem-backup/: test.py
AgenticMemory/: amem_result.json
AgenticMemory/cached_memories_advanced_openai_gpt-4o-mini/: retriever_cache_embeddings_sample_0.npy
AgenticMemory_a/: test_advanced.py
AgenticMemory_a/cached_memories_advanced_openai_gpt-4o-mini/: memory_cache_sample_0.pkl  retriever_cache_sample_0.pkl
Travel_autogen/src/: run.py
Travel_google_adk/: base_tutorial.ipynb
Travel_google_adk/src/: agent_responses.json
academic-research/: academic_research_evalset.test.json
academic-research/academic_research/: agent.py  evalsetb7481d.evalset.json  test.ipynb
academic-research/eval/: test_eval.py
cognee/: evaluation_runner.py
cognee/.deepeval/: .deepeval_telemetry.txt
docs/: test.ipynb
evaluation/: Makefile  example.ipynb
evaluation/faiss_graph_db/: mem0_evaluation.faiss  mem0_evaluation.pkl
evaluation/results/: memo_eval_gpt-4o.json  memo_eval_gpt-4o_example.json
evaluation/src/: evaluate.py
evaluation/test/: example.ipynb  langchain_memo.py  langgraph_memo.py  share_mem_multiagent_hierachy.py  simple_integration_examples.py
graphiti/: baseline_graph_results.json  baseline_mem0_context_results.json  baseline_mem0_graph_results.json  candidate_graph_results.json  shared_graph_evaluation_history.db
graphiti/tests/: test_graphiti_int.py
graphiti_a/: memory_test.py
mem0/: pyproject.toml
mem0/evaluation/my-project/: LICENSE.txt  README.md  pyproject.toml
mem0/evaluation/my-project/src/my_project/: __about__.py
mem0/evaluation/my-project/tests/: __init__.py
(+56 files in other folders)
